--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 github.client.id=97f7c39848ca33ed1f63
 github.client.secret=e8c2fc2b46c102509f6774e732cd40b262c36a60
 github.redirect.uri=http://localhost:8080/callback
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://39.96.195.154:3306/acu?characterEncoding=utf8&useUnicode=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=dzx123
+
