--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.url=jdbc:mysql://39.96.195.154:3306/acu?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=dzx123
 
+spring.flyway.baseline-on-migrate=true
+
+
+
+
+
