--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <version>1.18.10</version>
             <scope>provided</scope>
          </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
